--- a/modules/fruitninja.cbp
+++ b/modules/fruitninja.cbp
@@ -7,18 +7,18 @@
 		<Option compiler="pandora_compiler" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../bin/Debug/fruitninja" prefix_auto="1" extension_auto="1" />
+				<Option output="../bin/Debug/fruitninja.apkenv" prefix_auto="0" extension_auto="1" />
 				<Option object_output="../obj/Debug/" />
-				<Option type="1" />
+				<Option type="3" />
 				<Option compiler="pandora_compiler" />
 				<Compiler>
 					<Add option="-g" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="../bin/Release/fruitninja" prefix_auto="1" extension_auto="1" />
+				<Option output="../bin/Release/fruitninja.apkenv" prefix_auto="0" extension_auto="1" />
 				<Option object_output="../obj/Release/" />
-				<Option type="1" />
+				<Option type="3" />
 				<Option compiler="pandora_compiler" />
 				<Compiler>
 					<Add option="-O2" />
@@ -30,7 +30,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-DPANDORA" />
 		</Compiler>
+		<Unit filename="fruitninja.c">
+			<Option compilerVar="CC" />
+		</Unit>
 		<Extensions>
 			<code_completion />
 			<debugger />
