--- a/modules/fruitninja.cbp
+++ b/modules/fruitninja.cbp
@@ -7,17 +7,18 @@
 		<Option compiler="pandora_compiler" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../bin/Debug/fruitninja.apkenv" prefix_auto="0" extension_auto="1" />
-				<Option object_output="../obj/Debug/" />
+				<Option output="../bin/Debug/fruitninja.apkenv.so" prefix_auto="0" extension_auto="0" />
+				<Option object_output="./obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="pandora_compiler" />
 				<Compiler>
 					<Add option="-g" />
+					<Add option="-DAPKENV_DEBUG" />
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="../bin/Release/fruitninja.apkenv" prefix_auto="0" extension_auto="1" />
-				<Option object_output="../obj/Release/" />
+				<Option output="../bin/Release/fruitninja.apkenv.so" prefix_auto="0" extension_auto="0" />
+				<Option object_output="./obj/Release/" />
 				<Option type="3" />
 				<Option compiler="pandora_compiler" />
 				<Compiler>
