--- a/modules/cuttherope.cbp
+++ b/modules/cuttherope.cbp
@@ -8,7 +8,7 @@
 		<Build>
 			<Target title="Debug">
 				<Option output="../bin/Debug/cuttherope.apkenv.so" prefix_auto="1" extension_auto="0" />
-				<Option object_output="../obj/Debug/" />
+				<Option object_output="./obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="pandora_compiler" />
 				<Option createDefFile="1" />
@@ -19,7 +19,7 @@
 			</Target>
 			<Target title="Release">
 				<Option output="../bin/Release/cuttherope.apkenv.so" prefix_auto="1" extension_auto="0" />
-				<Option object_output="../obj/Release/" />
+				<Option object_output="./obj/Release/" />
 				<Option type="3" />
 				<Option compiler="pandora_compiler" />
 				<Option createDefFile="1" />
@@ -35,8 +35,9 @@
 		<Compiler>
 			<Add option="-Wall" />
 			<Add option="-DPANDORA" />
+			<Add option="-DAPKENV_DEBUG" />
 		</Compiler>
-		<Unit filename="modules/cuttherope.c">
+		<Unit filename="cuttherope.c">
 			<Option compilerVar="CC" />
 		</Unit>
 		<Extensions>
