moved png loader to imagelib and support jpeg loading, too support multi-touch emulation on pandora (left shoulder = second finger) fixed makefile fixed modules (added request_exit functions)

--- a/apkenv.cbp
+++ b/apkenv.cbp
@@ -15,7 +15,7 @@
 					<Add option="-g" />
 					<Add option="-DDEBUG=1" />
 					<Add option="-DLINKER_DEBUG=2" />
-					<Add option="-DAPKENV_DEBUG" />
+					<Add option="-DAPKENV_DEBUGx" />
 					<Add option="-DAPKENV_GLES" />
 				</Compiler>
 				<Linker>
