--- a/modules/trg2.cbp
+++ b/modules/trg2.cbp
@@ -7,7 +7,7 @@
 		<Option compiler="pandora_compiler" />
 		<Build>
 			<Target title="Debug">
-				<Option output="../bin/Debug/trg2.apkenv.so" prefix_auto="1" extension_auto="0" />
+				<Option output="../bin/Debug/trg2.apkenv.so" prefix_auto="0" extension_auto="0" />
 				<Option object_output="../obj/Debug/" />
 				<Option type="3" />
 				<Option compiler="pandora_compiler" />
@@ -16,9 +16,9 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="../bin/Release/trg2" prefix_auto="1" extension_auto="1" />
+				<Option output="../bin/Release/trg2.apkenv.so" prefix_auto="0" extension_auto="0" />
 				<Option object_output="../obj/Release/" />
-				<Option type="1" />
+				<Option type="3" />
 				<Option compiler="pandora_compiler" />
 				<Compiler>
 					<Add option="-O2" />
@@ -30,7 +30,11 @@
 		</Build>
 		<Compiler>
 			<Add option="-Wall" />
+			<Add option="-DPANDORA" />
 		</Compiler>
+		<Linker>
+			<Add library="SDL" />
+		</Linker>
 		<Unit filename="trg2.c">
 			<Option compilerVar="CC" />
 		</Unit>
